<resources>
    <string name="app_name">My Quick Note</string>
    <string name="action_settings">Settings</string>
    <string name="preference_name">myapp.tae.ac.uk.myquicknote.Preference_File</string>
    <string name="last_modified_test_date">2016.03.16 12:30:30</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_detail_hint">Note Content Details</string>
    <string name="error_title_empty">Title can\'t be empty. Please set your title</string>
    <string name="error_detail_empty">You must enter something in your Note content</string>
    <string name="save_confirm_dialog_title">Do you want to save the Note?</string>
    <string name="save_confirm_dialog_message">Press Save to save or Press Cancel to cancel the operation</string>
    <string name="empty_list">Press plus button add new List</string>
    <string name="note_title_test">This is Title</string>
    <string name="note_first_line_test_text">This is the first line test text and there is supposed to be more text ...</string>
    <string name="last_modified_date_field">Last Modified</string>
    <string name="action_delete_warning_message">Are you sure you want to remove the Item</string>
    <string name="action_delete_UNDO">UNDO</string>
</resources>
