<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_6sdp"
    android:layout_marginLeft="@dimen/_12sdp"
    android:layout_marginRight="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_6sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvListNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/_26sdp"
            android:padding="@dimen/_6sdp"
            android:text="@string/note_title_test"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListFirstLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvListNoteTitle"
            android:padding="@dimen/_6sdp"
            android:text="@string/note_first_line_test_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvListFirstLine"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvListFirstLine"
                android:padding="@dimen/_6sdp"
                android:text="@string/last_modified_date_field"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvListLastModified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvListFirstLine"
                android:padding="@dimen/_6sdp"
                android:text="@string/last_modified_test_date"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>