<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp">

    <include
        android:id="@+id/toolbarNoteDetail"
        layout="@layout/detail_activity_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarNoteDetail"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/note_title_hint">

                <EditText
                    android:id="@+id/etNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="26dp"
                    android:padding="6dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvLastModified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tilNoteTitle"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/last_modified_test_date" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNoteDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvLastModified"
                android:hint="@string/note_detail_hint">

                <EditText
                    android:id="@+id/etNoteDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="10"
                    android:padding="6dp" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>